add alibaba druid unauth case

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,9 @@ spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=org.sqlite.JDBC
 
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.stat-view-servlet.enabled=true
+spring.datasource.druid.web-stat-filter.enabled=true
+spring.datasource.druid.filters: stat
+
 management.endpoints.web.exposure.include=*
