add spring data jpa sql injection case

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 
 mybatis.mapper-locations=classpath:mappers/*xml
 mybatis.configuration-properties.table=users
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 spring.datasource.url=jdbc:sqlite::resource:db/vulnerablejava.db
 spring.datasource.username=
@@ -13,5 +14,9 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.stat-view-servlet.enabled=true
 spring.datasource.druid.web-stat-filter.enabled=true
 spring.datasource.druid.filters: stat
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.sqlite.hibernate.dialect.SQLiteDialect
 
 management.endpoints.web.exposure.include=*
