--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.sqlite.hibernate.dialect.SQLiteDialect
 
 management.endpoints.web.exposure.include=*
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
