add shiro vulnerability case

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             <version>1.2.24</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.2.4</version>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
         </dependency>
