add freemarker case

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ management.endpoints.web.exposure.include=*
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+spring.freemarker.suffix=.ftl
+spring.freemarker.content-type=text/html
+spring.freemarker.template-loader-path=classpath:/templates/
