add thymeleaf case

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,7 @@ spring.mvc.view.suffix=.jsp
 spring.freemarker.suffix=.ftl
 spring.freemarker.content-type=text/html
 spring.freemarker.template-loader-path=classpath:/templates/
+
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
